# GamePulse-SDK

./: .gitignore  Makefile  README.md  docker-compose.yml  fly.toml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
apps/dashboard/: Dockerfile  Home.py  pyproject.toml
apps/dashboard/.streamlit/: config.toml
apps/dashboard/lib/: api_client.py  auth.py  charts.py  filters.py  theme.py  ui.py
apps/dashboard/pages/: 0_Projects.py  10_Player_Timeline.py  11_Simulation.py  12_Rage_Quits.py  1_Overview.py  2_Players.py  3_Sessions.py  4_Funnels.py  5_Economy.py  6_Crashes.py  7_Live_Events.py  8_Settings.py  9_Retention.py
db/: README.md  seed.sql
db/migrations/: 0001_init.sql  0002_events.sql  0003_crashes.sql  0004_views_and_indexes.sql  0005_player_indexes.sql  0006_project_ownership.sql  0007_simulated_flag.sql  0008_public_refresh_rpc.sql  0009_refresh_fn_security_definer.sql
docs/: adr.md  analytics-pipeline.md  architecture.md  dashboard-guide.md  database-design.md  deployment.md  event-taxonomy.md  non-functional-requirements.md  performance.md  sdk-architecture.md  sdk-usage.md  simulation-design.md  tech_debt.md
examples/demo-game/: .env.example  README.md  demo_game.py
scripts/: check_connectivity.py  demo_seed.py
services/api/: Dockerfile  pyproject.toml
services/api/app/: deps.py  logging_config.py  main.py  scheduler.py  settings.py
services/api/app/api/v1/: crashes.py  debug.py  ingest.py  manage.py  projects.py  query.py  router.py  sessions.py
services/api/app/db/: supabase.py
services/api/app/db/repositories/: crashes.py  events.py  players.py  projects.py  sessions.py
services/api/app/middleware/: content_size.py  logging.py  rate_limit.py  request_id.py
services/api/app/security/: api_keys.py  auth.py
services/api/app/services/: analytics_service.py  ingest_service.py  session_service.py  simulator_service.py
tests/api/: conftest.py  test_health.py  test_ingest_and_query.py
tests/core/: test_events.py
tests/e2e/: test_pipeline.py
tests/sdk/: test_noop_mode.py  test_offline_storage.py
