[project]
name = "gamepulse-workspace"
version = "0.1.0"
description = "GamePulse — game analytics platform (SDK + API + Dashboard + Simulator)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "uvicorn>=0.48.0",
]

[tool.uv.workspace]
members = [
    "packages/gamepulse-core",
    "packages/gamepulse-sdk",
    "packages/gamepulse-simulator",
    "services/api",
    "apps/dashboard",
]

[tool.uv.sources]
gamepulse-core      = { workspace = true }
gamepulse-sdk       = { workspace = true }
gamepulse-simulator = { workspace = true }
gamepulse-api       = { workspace = true }
gamepulse-dashboard = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
    "respx>=0.21",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = [
    "E501",   # line length: enforced by formatter
    "B008",   # FastAPI uses Depends() in defaults — that's the idiom
    "N818",   # str-Enum is fine without "Error" suffix
    "N812",   # SDK_CORE_VERSION re-alias is intentional
    "SIM105", # try/except/pass is clear; contextlib.suppress isn't a win here
    "SIM110", # explicit for-loops are clearer than all()/any() in some cases
    "UP042",  # (str, Enum) is intentional; pydantic v2 serializes both identically
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = [
    "services/api",
    "packages/gamepulse-core",
    "packages/gamepulse-sdk",
    "packages/gamepulse-simulator",
]
