[project]
name = "gamepulse-dashboard"
version = "0.1.0"
description = "GamePulse Streamlit dashboard"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.36",
    "plotly>=5.22",
    "pandas>=2.2",
    "httpx>=0.27",
    "supabase>=2.0",
    "gamepulse-core",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lib"]
