[project]
name = "gamepulse-api"
version = "0.1.0"
description = "GamePulse FastAPI ingestion + query service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "supabase>=2.5",
    "python-jose[cryptography]>=3.3",
    "PyJWT[crypto]>=2.4",
    "httpx>=0.27",
    "gamepulse-core",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
